Добавил ссылку на проект и код в README.md

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;&nbsp;2020.&nbsp;Mesto Russia</p>
     </footer>
-    <!-- Чтобы открыть меню нужно добавить к классу popup модификатор popup_opened -->
+    <!-- Чтобы открыть модальное окно, необходимо добавить к классу popup модификатор popup_opened -->
     <div class="popup">
       <form action="#" class="popup__container">
         <button class="popup__close"></button>
