Исправления после 3-го ревью

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <form action="#" name="profile" class="form">
           <h2 class="form__heading">Редактировать профиль</h2>
           <input
-            class="form__item form__item_margin_name form__item_el_name"
+            class="form__item form__item_el_name"
             name="profile-name"
             type="text"
             id="profile-name"
@@ -163,7 +163,7 @@
             required
           />
           <input
-            class="form__item form__item_margin_profession form__item_el_profession"
+            class="form__item form__item_el_profession"
             name="profile-profession"
             type="text"
             id="profile-profession"
