--- a/index.html
+++ b/index.html
@@ -45,98 +45,7 @@
         ></button>
       </section>
       <section class="elements" aria-label="Фотографии по теме - места России.">
-        <ul class="cards">
-          <li class="cards__item">
-            <img
-              src="./images/Karachaevsk.png"
-              alt="Изображение: Сентинский храм (18 км от города Карачаевск)"
-              class="cards__image"
-            />
-            <div class="cards__description">
-              <h3 class="cards__title">Карачаевск</h3>
-              <button
-                title="Поставить отметку - нравится"
-                type="button"
-                class="cards__like"
-              ></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img
-              src="./images/Mountain_Elbrus.png"
-              alt="Изображение: Гора Эльбрус"
-              class="cards__image"
-            />
-            <div class="cards__description">
-              <h3 class="cards__title">Гора Эльбрус</h3>
-              <button
-                title="Поставить отметку - нравится"
-                type="button"
-                class="cards__like"
-              ></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img
-              src="./images/Dombai.png"
-              alt="Изображение: Домбай - главный Кавказский хребет"
-              class="cards__image"
-            />
-            <div class="cards__description">
-              <h3 class="cards__title">Домбай</h3>
-              <button
-                title="Поставить отметку - нравится"
-                type="button"
-                class="cards__like"
-              ></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img
-              src="./images/karakolskie-ozera.jpg"
-              alt="Изображение: Алтай - Каракольские озера"
-              class="cards__image"
-            />
-            <div class="cards__description">
-              <h3 class="cards__title">Каракольские озера</h3>
-              <button
-                title="Поставить отметку - нравится"
-                type="button"
-                class="cards__like"
-              ></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img
-              src="./images/ostrov-patmos-hram.jpg"
-              alt="Изображение: Алтай - Храм Иоанна Богослова на острове Патмос"
-              class="cards__image"
-            />
-            <div class="cards__description">
-              <h3 class="cards__title">Остров Патмос</h3>
-              <button
-                title="Поставить отметку - нравится"
-                type="button"
-                class="cards__like"
-              ></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img
-              src="./images/stone-mushrooms.jpg"
-              alt="Изображение: Алтай - Каменные грибы: урочище Аккурум"
-              class="cards__image"
-            />
-            <div class="cards__description">
-              <h3 class="cards__title">Урочище Аккурум</h3>
-              <button
-                title="Поставить отметку - нравится"
-                type="button"
-                class="cards__like cards__like_active"
-              ></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="cards"></ul>
       </section>
     </main>
     <!-- Подвал сайта -->
@@ -144,17 +53,17 @@
       <p class="footer__copyright">&copy;&nbsp;2020.&nbsp;Mesto Russia</p>
     </footer>
     <!-- Чтобы открыть модальное окно, необходимо добавить к классу popup модификатор popup_opened -->
-    <div class="popup">
+    <div class="popup popup__profile">
       <div class="popup__container">
         <button
           title="Закрыть без сохранения данных"
           type="button"
           class="popup__close"
         ></button>
-        <form action="#" name="profile" class="form">
-          <h2 class="form__heading">Редактировать профиль</h2>
+        <form action="#" name="profile" class="form-profile">
+          <h2 class="form-profile__heading">Редактировать профиль</h2>
           <input
-            class="form__item form__item_el_name"
+            class="form-profile__item form-profile__item_el_name"
             name="profile-name"
             type="text"
             id="profile-name"
@@ -163,7 +72,7 @@
             required
           />
           <input
-            class="form__item form__item_el_profession"
+            class="form-profile__item form-profile__item_el_profession"
             name="profile-profession"
             type="text"
             id="profile-profession"
@@ -171,9 +80,64 @@
             value="Исследователь океана"
             required
           />
-          <input class="form__button" type="submit" value="Сохранить" />
+          <input class="form-profile__button" type="submit" value="Сохранить" />
         </form>
       </div>
     </div>
+    <div class="popup popup__card">
+      <div class="popup__container">
+        <button
+          title="Закрыть без сохранения данных"
+          type="button"
+          class="popup__close"
+        ></button>
+        <form action="#" name="profile" class="form-card">
+          <h2 class="form-card__heading">Новое место</h2>
+          <input
+            class="form-card__item form-card__item_el_name"
+            name="card-name"
+            type="text"
+            id="card-name"
+            placeholder="Название"
+            value=""
+            required
+          />
+          <input
+            class="form-card__item form-card__item_el_link"
+            name="card-link"
+            type="text"
+            id="card-link"
+            placeholder="Ссылка на картинку"
+            value=""
+            required
+          />
+          <input class="form-card__button" type="submit" value="Сохранить" />
+        </form>
+      </div>
+    </div>
+    <div class="popup popup__card-image">
+      <div class="popup__container-image">
+        <button
+          type="button"
+          class="popup__close"
+          title="Закрыть окно просмотра"
+        ></button>
+        <figure class="popup__figure">
+          <img src="" class="popup__image" alt="" />
+          <figcaption class="popup__image-caption"></figcaption>
+        </figure>
+      </div>
+    </div>
+    <template id="oneCard">
+      <li class="cards__item">
+        <img class="cards__image" />
+        <img class="cards__trash" />
+        <div class="cards__description">
+          <h3 class="cards__title"></h3>
+          <button title="#" type="button" class="cards__like"></button>
+        </div>
+      </li>
+    </template>
+    <script src="./js/main.js" defer></script>
   </body>
 </html>
