--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           type="button"
           class="popup__close"
         ></button>
-        <form action="#" name="profile" class="form-profile">
+        <form action="#" name="formEditProfile" class="form-profile">
           <h2 class="form-profile__heading">Редактировать профиль</h2>
           <input
             class="form-profile__item form-profile__item_el_name"
@@ -68,7 +68,7 @@
             type="text"
             id="profile-name"
             placeholder="Имя Фамилия"
-            value="Жак-Ив Кусто"
+            value=""
             required
           />
           <input
@@ -77,7 +77,7 @@
             type="text"
             id="profile-profession"
             placeholder="Профессия"
-            value="Исследователь океана"
+            value=""
             required
           />
           <input class="form-profile__button" type="submit" value="Сохранить" />
@@ -91,7 +91,7 @@
           type="button"
           class="popup__close"
         ></button>
-        <form action="#" name="profile" class="form-card">
+        <form action="#" name="formAddCard" class="form-card">
           <h2 class="form-card__heading">Новое место</h2>
           <input
             class="form-card__item form-card__item_el_name"
