--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место Россия</title>
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <header class="header">
       <img
         class="header__logo"
-        src="./images/logo.svg"
+        src="<%=require('./images/logo.svg')%>"
         alt="Логотип: Место Russia"
       />
     </header>
     <main>
       <section class="profile">
         <img
-          src="./images/Jacq_Cousteau.jpg"
+          src="<%=require('./images/Jacq_Cousteau.jpg')%>"
           alt="Фото: Аватар пользователя"
           class="profile__avatar"
         />
@@ -155,6 +153,5 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./js/index.js" defer></script>
   </body>
 </html>
