--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,19 @@
         </figure>
       </div>
     </div>
+    <div class="popup popup__agreement">
+      <div class="popup__container">
+        <button
+          title="Закрыть без сохранения данных"
+          type="button"
+          class="popup__close"
+        ></button>
+        <form action="#" name="agreement" class="popup__form">
+          <h2 class="popup__heading">Вы уверены ?</h2>
+          <button class="popup__button" type="button">Да</button>
+        </form>
+      </div>
+    </div>
     <template id="oneCard">
       <li class="cards__item" id="">
         <img class="cards__image" />
