Mesto(сервер) - html, css, js - отработка функционала - на ревью 1

--- a/src/index.html
+++ b/src/index.html
@@ -154,8 +154,8 @@
             />
             <span class="popup__input-error" id="url-error"></span>
           </label>
-          <button class="popup__button" value="Сохранить" type="submit">
-            Сохранить
+          <button class="popup__button" value="Создать" type="submit">
+            Создать
           </button>
         </form>
       </div>
